tmp_importtime_after.log
import time: self [us] | cumulative | imported package
import time:       146 |        146 | winreg
import time:       293 |        293 |   _io
import time:        51 |         51 |   marshal
import time:       168 |        168 |   nt
import time:       399 |        909 | _frozen_importlib_external
import time:      1057 |       1057 |   time
import time:       144 |       1200 | zipimport
import time:        55 |         55 |     _codecs
import time:       377 |        431 |   codecs
import time:      1125 |       1125 |   encodings.aliases
import time:      1820 |       3375 | encodings
import time:       590 |        590 | encodings.utf_8
import time:        43 |         43 |   _codecs_kr
import time:        38 |         38 |   _multibytecodec
import time:       594 |        674 | encodings.cp949
import time:        35 |         35 | _signal
import time:        26 |         26 |     _abc
import time:        98 |        124 |   abc
import time:       110 |        234 | io
import time:        43 |         43 |       _stat
import time:        50 |         93 |     stat
import time:       584 |        584 |     _collections_abc
import time:        28 |         28 |       genericpath
import time:        75 |         75 |       _winapi
import time:        74 |        176 |     ntpath
import time:       213 |       1064 |   os
import time:        51 |         51 |   _sitebuiltins
import time:       768 |        768 |   encodings.utf_8_sig
import time:      2024 |       2024 |   _distutils_hack
import time:       733 |        733 |     pywin32_system32
import time:      1156 |       1888 |   pywin32_bootstrap
import time:       479 |        479 |   sitecustomize
import time:       252 |        252 |   usercustomize
import time:      2169 |       8692 | site
  File "<string>", line 1
    "
    ^
SyntaxError: unterminated string literal (detected at line 1)
